added docker file and new cli update site